--- a/Edena/css/tab.css
+++ b/Edena/css/tab.css
@@ -5,7 +5,7 @@
     position: relative;
     overflow: hidden;
     background: #fff;
-    width: 70%;
+    width: 100%;
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
     font-weight: 300;
